--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b main -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +40,5 @@
     "@testing-library/react": "^11.2.5",
     "gh-pages": "^3.1.0"
   },
-  "homepage": "http://niles87.github.io/photo-port"
+  "homepage": "https://niles87.github.io/photo-port"
 }
